# SigStickers

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: mirror-to-codeberg.yaml  test-lint.yaml
DOCS/: README.md
DOCS/sigstickers/: caching.md  downloader.md  index.md  module.md
documentation/reference/: MODULES.md  README.md
documentation/reference/sigstickers/: caching.md  cli.md  downloader.md  index.md  module.md
readme-assets/icons/: SigStickers.xcf
sigstickers/: __init__.py  __main__.py  caching.py  cli.py  downloader.py
tests/: test_caching.py  test_cli.py  test_downloader.py  test_main.py  test_user.py
