[project]
name = "sigstickers"
version = "2025"
description = "Download sticker packs from Signal"
authors = [{ name = "FredHappyface" }]
requires-python = ">=3.8"
readme = "README.md"
license = "mit"
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"Intended Audience :: Education",
	"Natural Language :: English",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: Implementation :: CPython",
	"Topic :: Software Development :: Libraries :: Python Modules",
	"Topic :: Utilities",
	"Topic :: Multimedia :: Graphics",
]
dependencies = [
	"Pillow<11,>=10.2.0",
	"signalstickers-client<4,>=3.3.0",
	"emoji<3,>=2.10.1",
	"loguru<2,>=0.7.2",
]

[project.urls]
Homepage = "https://github.com/FHPythonUtils/SigStickers"
Repository = "https://github.com/FHPythonUtils/SigStickers"
Documentation = "https://github.com/FHPythonUtils/SigStickers/blob/master/README.md"

[project.scripts]
sigstickers = "sigstickers:cli"

[dependency-groups]
dev = [
	"pytest>=8.1.1,<9",
	"handsdown>=2.1.0,<3",
	"coverage>=7.4.4,<8",
	"ruff>=0.3.3,<0.4",
	"pyright>=1.1.354,<2",
	"pytest-asyncio>=0.23.5.post1,<0.24",
	"safety>=3.3.0",
]

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py38"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
	"COM812",  # enforce trailing comma
	"D2",  # pydocstyle formatting
	"ISC001",
	"N",  # pep8 naming
	"PLR09",  # pylint refactor too many
	"TCH",  # type check blocks
	"W191"  # ignore this to allow tabs
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"**/{tests,docs,tools}/*" = ["D", "S101", "E402"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all" # Disallow all relative imports.

[tool.ruff.format]
indent-style = "tab"
docstring-code-format = true
line-ending = "lf"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.coverage.run]
branch = true

[tool.tox]
legacy_tox_ini = """
[tox]
env_list =
	py313
	py312
	py311
	py310
	py39
	py38

[testenv]
deps = pytest
commands = pytest tests
"""
